--- a/nhahang/pom.xml
+++ b/nhahang/pom.xml
@@ -12,10 +12,17 @@
     </properties>
     <dependencies>
         <dependency>
-        <groupId>com.microsoft.sqlserver</groupId>
-        <artifactId>mssql-jdbc</artifactId>
-        <version>12.10.0.jre11</version>
-        <scope>compile</scope>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.10.0.jre11</version>
+            <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.2</version> <!-- or the latest -->
+        </dependency>
+
     </dependencies>
+    
 </project>
